# n_puzzle

./: .gitignore  Cargo.toml  actions  actions.go  astar.go  bst.go  go.mod  go.sum  heuristic.go  main.go  math.go  n_puzzle  node.go  parser.go  puzzle.go  solver.go  tools.go  utils.go
solver/: Node.go  a_star.go  closedList.go  heuristic.go  openList.go  pool.go  solver.go  turns.go
src/: flags.rs  logger.rs  main.rs  puzzle.rs
