[package]
edition = "2021"
name = "puzzle"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["fmt"] }
